gotwebd: fix colour of target lines in dark mode
reported by xs on IRC, thanks!

--- a/gotwebd/files/htdocs/gotwebd/gotweb.css
+++ b/gotwebd/files/htdocs/gotwebd/gotweb.css
@@ -515,6 +515,10 @@ dd {
 		text-decoration: none;
 	}
 
+	.blame_line:target, .blob_line:target {
+		background-color: #44475a;
+	}
+
 	#site_owner_wrapper, #np_wrapper {
 		background-color: unset;
 	}
